--- a/workflow-templates/rhel7-openshift-tests.yaml
+++ b/workflow-templates/rhel7-openshift-tests.yaml
@@ -63,10 +63,10 @@ jobs:
           apt update && apt -y install curl jq
           cat << EOF > request.json
           {
-            "api_key": "${{ secrets.TF_PUBLIC_API_KEY }}",
+            "api_key": "${{ secrets.TF_INTERNAL_API_KEY }}",
             "test": {"fmf": {
-              "url": "https://github.com/sclorg/sclorg-testing-farm",
-              "ref": "main"
+              "url": "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans",
+              "ref": "master"
             }},
             "environments": [{
               "arch": "x86_64",
@@ -84,19 +84,6 @@ jobs:
           curl ${{ secrets.TF_ENDPOINT }}/requests --data @request.json --header "Content-Type: application/json" --output response.json
           # Store REQ_ID into outputs for later on usage
           echo "::set-output name=REQ_ID::$(jq -r .id response.json)"
-
-#      - name: Add comment with Testing Farm request/result
-#        # This step adds a new comment to the pull request with a link to the test.
-#        # TODO: This is a temporary workaround until a proper way to set a commit status is implemented.
-#        id: comment
-#        uses: peter-evans/create-or-update-comment@v1
-#        if: always()
-#        with:
-#          issue-number: ${{ steps.pr_nr.outputs.PR_NR }}
-#          body: |
-#            Testing Farm - CentOS 7 [request](${{ secrets.TF_ENDPOINT }}/requests/${{ steps.sched_test.outputs.req_id }})
-#            for CentOS 7 test was created. Once finished, results should be available [here](http://artifacts.dev.testing-farm.io/${{ steps.sched_test.outputs.req_id }}/)
-#            [Full pipeline log](http://artifacts.dev.testing-farm.io/${{ steps.sched_test.outputs.req_id }}/pipeline.log)
 
   running:
     needs: build
