--- a/workflow-templates/rhel7-openshift-tests.yaml
+++ b/workflow-templates/rhel7-openshift-tests.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     # This job only runs for '[test]' pull request comments by owner, member
-    name: Schedule test on Testing Farm service for RHEL7 - Openshift
+    name: Schedule test on Testing Farm service for RHEL7 - OpenShift 3
     runs-on: ubuntu-20.04
     if: |
       github.event.issue.pull_request
@@ -45,7 +45,7 @@ jobs:
             "sha": "${{steps.sha.outputs.SHA}}",
             "state": "pending",
             "context": "Testing Farm - RHEL7 - OpenShift 3",
-            "target_url": "http://artifacts.dev.testing-farm.io/${{ steps.sched_test.outputs.req_id }}/pipeline.log"
+            "target_url": "http://artifacts.osci.redhat.com/testing-farm/${{ steps.sched_test.outputs.req_id }}"
           }
           EOF
           echo "https://api.github.com/repos/$GITHUB_REPOSITORY/statuses/${{steps.sha.outputs.SHA}}"
@@ -66,7 +66,8 @@ jobs:
             "api_key": "${{ secrets.TF_INTERNAL_API_KEY }}",
             "test": {"fmf": {
               "url": "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans",
-              "ref": "master"
+              "ref": "master",
+              "name": "rhel7-openshift"
             }},
             "environments": [{
               "arch": "x86_64",
@@ -114,7 +115,7 @@ jobs:
             "state": "pending",
             "context": "Testing Farm - RHEL7 - OpenShift 3",
             "description": "Build started",
-            "target_url": "http://artifacts.dev.testing-farm.io/${{ needs.build.outputs.REQ_ID }}/"
+            "target_url": "http://artifacts.osci.redhat.com/testing-farm/${{ needs.build.outputs.REQ_ID }}"
           }
           EOF
           # Update GitHub status description to 'Build started'
@@ -182,7 +183,7 @@ jobs:
             "state": "${{steps.final_state.outputs.FINAL_STATE}}",
             "context": "Testing Farm - RHEL7 - OpenShift 3",
             "description": "Build finished${{steps.final_state.outputs.INFRA_STATE}}",
-            "target_url": "http://artifacts.dev.testing-farm.io/${{ needs.running.outputs.REQ_ID }}/"
+            "target_url": "http://artifacts.osci.redhat.com/testing-farm/${{ needs.running.outputs.REQ_ID }}"
           }
           EOF
           cat final.json
