--- a/workflow-templates/rhel7-openshift-tests.yaml
+++ b/workflow-templates/rhel7-openshift-tests.yaml
@@ -67,7 +67,7 @@ jobs:
             "test": {"fmf": {
               "url": "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans",
               "ref": "master",
-              "name": "rhel7-openshift"
+              "name": "rhel7-openshift-3"
             }},
             "environments": [{
               "arch": "x86_64",
