--- a/workflow-templates/docker-tests.yml
+++ b/workflow-templates/docker-tests.yml
@@ -16,25 +16,25 @@ jobs:
           - tmt_plan: "fedora"
             os_test: "fedora"
             context: "Fedora"
-            compose: "CentOS-7"
+            compose: "CentOS-7-latest"
             tmt_url: "http://artifacts.dev.testing-farm.io/"
             tmt_repo: "https://github.com/sclorg/sclorg-testing-farm"
           - tmt_plan: "centos7"
             os_test: "centos7"
             context: "CentOS7"
-            compose: "CentOS-7"
+            compose: "CentOS-7-latest"
             tmt_url: "http://artifacts.dev.testing-farm.io/"
             tmt_repo: "https://github.com/sclorg/sclorg-testing-farm"
           - tmt_plan: "rhel7-docker"
             os_test: "rhel7"
             context: "RHEL7"
-            compose: "RHEL-7.9-Released"
+            compose: "RHEL-7-LatestUpdated"
             tmt_url: "http://artifacts.osci.redhat.com/testing-farm/"
             tmt_repo: "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans"
           - tmt_plan: "rhel8-docker"
             os_test: "rhel8"
             context: "RHEL8"
-            compose: "RHEL-8.3.1-Released"
+            compose: "RHEL-8.5.0-Nightly"
             tmt_url: "http://artifacts.osci.redhat.com/testing-farm/"
             tmt_repo: "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans"
     if: |
