--- a/workflow-templates/openshift-tests.yml
+++ b/workflow-templates/openshift-tests.yml
@@ -16,28 +16,28 @@ jobs:
           - tmt_plan: "centos7"
             os_test: "centos7"
             context: "CentOS7 - OpenShift 3"
-            compose: "CentOS-7"
+            compose: "CentOS-7-latest"
             tmt_url: "http://artifacts.dev.testing-farm.io/"
             tmt_repo: "https://github.com/sclorg/sclorg-testing-farm"
             test_name: "test-openshift"
           - tmt_plan: "rhel7-openshift-3"
             os_test: "rhel7"
             context: "RHEL7 - OpenShift 3"
-            compose: "RHEL-7.9-Released"
+            compose: "RHEL-7-LatestUpdated"
             tmt_url: "http://artifacts.osci.redhat.com/testing-farm/"
             tmt_repo: "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans"
             test_name: "test-openshift"
           - tmt_plan: "rhel7-openshift-4"
             os_test: "rhel7"
             context: "RHEL7 - OpenShift 4"
-            compose: "RHEL-7.9-Released"
+            compose: "RHEL-7-LatestUpdated"
             tmt_url: "http://artifacts.osci.redhat.com/testing-farm/"
             tmt_repo: "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans"
             test_name: "test-openshift-4"
           - tmt_plan: "rhel8-openshift-4"
             os_test: "rhel8"
             context: "RHEL8 - OpenShift 4"
-            compose: "RHEL-8.3.1-Released"
+            compose: "RHEL-8.5.0-Nightly"
             tmt_url: "http://artifacts.osci.redhat.com/testing-farm/"
             tmt_repo: "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans"
             test_name: "test-openshift-4"
