--- a/workflow-templates/openshift-tests.yml
+++ b/workflow-templates/openshift-tests.yml
@@ -37,7 +37,7 @@ jobs:
           - tmt_plan: "rhel8-openshift-4"
             os_test: "rhel8"
             context: "RHEL8 - OpenShift 4"
-            compose: "RHEL-8.5.0-Nightly"
+            compose: "RHEL-8-Updated"
             tmt_url: "http://artifacts.osci.redhat.com/testing-farm/"
             tmt_repo: "https://gitlab.cee.redhat.com/platform-eng-core-services/sclorg-tmt-plans"
             test_name: "test-openshift-4"
